syntax = "proto3";
package model;
option go_package = "model/transport";

message Message {
  uint64 id = 1;
  enum MsgType {
    NewConnect = 0;
    NewConnectResponse = 1;
    Data = 2;
  }
  MsgType type = 2;
  bytes data = 3;
}

message NewConnect {
  enum AddrType {
    Domain = 0;
    IPV4 = 1;
    IPV6 = 2;
  }
  AddrType addrType = 1;
  string address = 2;
  int32 port = 3;
}

message NewConnectResponse {
  bool ojbk = 1;
}